Minor build fixes

--- a/microservice-assessment/src/main/resources/application.properties
+++ b/microservice-assessment/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+#Global configuration
+spring.application.name=massessment
+logging.level.root=error
+logging.level.com.mediscreen.massessment=debug
+logging.level.org.springframework.boot.web.embedded.tomcat=info
+logging.level.org.springframework.transaction.interceptor=error
+server.port=8083
