--- a/microservice-history/src/main/resources/application.properties
+++ b/microservice-history/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Global configuration
-spring.application.name=mpatients
+spring.application.name=mhistory
 logging.level.root=error
-logging.level.com.mediscreen.mpatients=debug
+logging.level.com.mediscreen.mhistory=debug
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8082
