Set up MongoDB and created CRUD services for mhistory, minor fixes to mpatients

--- a/microservice-history/src/main/resources/application.properties
+++ b/microservice-history/src/main/resources/application.properties
@@ -5,3 +5,9 @@ logging.level.com.mediscreen.mhistory=debug
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8082
+#NoSQL Database Configuration
+spring.data.mongodb.uri=mongodb+srv://mactepluke:qU97pQ2qM4@syngletoncluster.gbj9tvz.mongodb.net/
+spring.data.mongodb.database=mediscreen_nosql_db
+spring.data.mongodb.username=mactepluke
+spring.data.mongodb.password=qU97pQ2qM4
+spring.data.mongodb.auto-index-creation=true
