Fixes to 'ui' module's structure, starting implementing the assessment feature

--- a/microservice-assessment/src/main/resources/application.properties
+++ b/microservice-assessment/src/main/resources/application.properties
@@ -5,3 +5,5 @@ logging.level.com.mediscreen.massessment=debug
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8083
+#Model config
+triggering_terms=hémoglobine A1C,Microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,réaction,anticorps
