--- a/microservice-assessment/src/main/resources/application.properties
+++ b/microservice-assessment/src/main/resources/application.properties
@@ -5,5 +5,13 @@ logging.level.com.mediscreen.massessment=debug
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8083
-#Model config
-triggering_terms=hémoglobine A1C,Microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,réaction,anticorps
+#Diabetes assessment config
+triggering_terms=hemoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,reaction,anticorps
+risk_age_threshold=30
+borderline_risk_trigger_threshold=2
+in_danger_young_male_trigger_threshold=3
+in_danger_young_female_trigger_threshold=4
+in_danger_old_trigger_threshold=6
+early_onset_young_male_trigger_threshold=5
+early_onset_young_female_trigger_threshold=7
+early_onset_old_trigger_threshold=8
