Assessment feature works, styles applied, snackbar and spinner work

--- a/microservice-assessment/src/main/resources/application.properties
+++ b/microservice-assessment/src/main/resources/application.properties
@@ -6,7 +6,7 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8083
 #Diabetes assessment config
-triggering_terms=hemoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,reaction,anticorps
+triggering_terms=hemoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,reaction,anticorps,hemoglobin A1C,microalbumin,weight,height,smoker,abnormal,vertigo,relapse,antibody
 risk_age_threshold=30
 borderline_risk_trigger_threshold=2
 in_danger_young_male_trigger_threshold=3
