--- a/microservice-assessment/pom.xml
+++ b/microservice-assessment/pom.xml
@@ -72,6 +72,7 @@
     </dependencies>
 
     <build>
+        <finalName>massessment</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
