--- a/microservice-history/pom.xml
+++ b/microservice-history/pom.xml
@@ -66,6 +66,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>mhistory</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
