--- a/microservice-history/src/main/resources/application.properties
+++ b/microservice-history/src/main/resources/application.properties
@@ -6,8 +6,8 @@ logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8082
 #NoSQL Database Configuration
-spring.data.mongodb.uri=mongodb+srv://mactepluke:qU97pQ2qM4@syngletoncluster.gbj9tvz.mongodb.net/
-spring.data.mongodb.database=mediscreen_nosql_db
-spring.data.mongodb.username=mactepluke
-spring.data.mongodb.password=qU97pQ2qM4
-spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.uri=${MONGO_URI}
+spring.data.mongodb.database=${MONGO_INITDB_DATABASE}
+spring.data.mongodb.username=${MONGO_INITDB_ROOT_USERNAME}
+spring.data.mongodb.password=${MONGO_INITDB_ROOT_PASSWORD}
+spring.data.mongodb.auto-index-creation=${MONGO_AUTO_INDEX_CREATION}
