--- a/microservice-patients/pom.xml
+++ b/microservice-patients/pom.xml
@@ -76,6 +76,7 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<finalName>mpatients</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
