--- a/ui/package.json
+++ b/ui/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "^16.1.8",
     "@angular/platform-browser-dynamic": "^16.1.8",
     "@angular/router": "^16.1.8",
+    "@auth0/angular-jwt": "^5.1.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "typescript-cookie": "^1.0.6",
     "zone.js": "~0.13.1"
   },
   "devDependencies": {
