--- a/ui/package.json
+++ b/ui/package.json
@@ -22,8 +22,11 @@
     "@angular/router": "^16.1.8",
     "@auth0/angular-jwt": "^5.1.2",
     "jwt-decode": "^3.1.2",
+    "lockdown": "^0.0.5",
+    "minimatch": "^9.0.3",
     "moment": "^2.29.4",
     "rxjs": "~7.8.0",
+    "semver": "^7.5.4",
     "tslib": "^2.3.0",
     "typescript-cookie": "^1.0.6",
     "zone.js": "~0.13.1"
