--- a/microservice-patients/src/main/resources/application.properties
+++ b/microservice-patients/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #Global configuration
 spring.application.name=mpatients
 logging.level.root=error
-logging.level.com.mediscreen.mpatients=${LOG_LEVEL}
+logging.level.com.mediscreen.mpatients=${LOG_LEVEL:debug}
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8081
 #Database configuration
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USERNAME}
-spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.url=${DATASOURCE_URL:jdbc:mysql://localhost:3306/mediscreen_db?serverTimezone=UTC}
+spring.datasource.username=${DATASOURCE_USERNAME:username}
+spring.datasource.password=${DATASOURCE_PASSWORD:password}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
