--- a/microservice-assessment/src/main/resources/application.properties
+++ b/microservice-assessment/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #Global configuration
 spring.application.name=massessment
 logging.level.root=error
-logging.level.com.mediscreen.massessment=${LOG_LEVEL}
+logging.level.com.mediscreen.massessment=${LOG_LEVEL:debug}
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8083
 #Diabetes assessment config
-triggering_terms=${TRIGGERING_TERMS}
+triggering_terms=${TRIGGERING_TERMS:hemoglobine A1C,microalbumine,taille,poids,fumeur,anormal,cholesterol,vertige,rechute,reaction,anticorps}
 risk_age_threshold=30
 borderline_risk_trigger_threshold=2
 in_danger_young_male_trigger_threshold=3
