--- a/microservice-history/src/main/resources/application.properties
+++ b/microservice-history/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 #Global configuration
 spring.application.name=mhistory
 logging.level.root=error
-logging.level.com.mediscreen.mhistory=${LOG_LEVEL}
+logging.level.com.mediscreen.mhistory=${LOG_LEVEL:debug}
 logging.level.org.springframework.boot.web.embedded.tomcat=info
 logging.level.org.springframework.transaction.interceptor=error
 server.port=8082
 #NoSQL Database Configuration
-spring.data.mongodb.uri=${MONGO_URI}
-spring.data.mongodb.database=${MONGO_INITDB_DATABASE}
-spring.data.mongodb.username=${MONGO_INITDB_ROOT_USERNAME}
-spring.data.mongodb.password=${MONGO_INITDB_ROOT_PASSWORD}
-spring.data.mongodb.auto-index-creation=${MONGO_AUTO_INDEX_CREATION}
+spring.data.mongodb.uri=${MONGO_URI:mongodb://localhost:27017/}
+spring.data.mongodb.database=${MONGO_INITDB_DATABASE:mediscreen_nosql_db}
+spring.data.mongodb.username=${MONGO_INITDB_ROOT_USERNAME:username}
+spring.data.mongodb.password=${MONGO_INITDB_ROOT_PASSWORD:password}
+spring.data.mongodb.auto-index-creation=${MONGO_AUTO_INDEX_CREATION:true}
